--- a/_sass/primitives/_typography.scss
+++ b/_sass/primitives/_typography.scss
@@ -53,7 +53,6 @@ h5 {
   line-height: 1.3;
 }
 h1 {
-  margin-top: 0;
   font-size: $title;
 }
 
